2011-11-04	Thomas Doerfler <thomas.doerfler@embedded-brains.de>

PR target/50980
	* config/arm/rtems-elf.h, config/arm/t-rtems: Add optional
	support for VFP floating point model.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@180959 138bc75d-0d04-0410-961f-82ee72b054a4